--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <br>Course
             </h1>
 
-            <p class="par">Web Design is a specialization of the design stream. They also use HTML,<br>
-                CSS, WYSIWYG editing software, mark up validators etc., <br>
+            <p class="par">Web Design is a specialization of the design stream. <br>They also use HTML,
+                CSS, WYSIWYG editing software, <br> mark up validators etc., <br>
                 to create design elements.
             </p> 
 
@@ -60,7 +60,7 @@
                 <button class="btnn"><a href="#">Login</a></button>
                 
                 <p class="link">Don't have an account <br> 
-                    <a href="#">Sign up</a>here</a>
+                    <a href="#">Sign up</a> here
                 </p>
 
                 <p class="liw">
