--- a/index.html
+++ b/index.html
@@ -37,17 +37,21 @@
 
         <div class="content">
 
-            <h1>Web Design & <br> 
-                <span>Development</span> 
-                <br>Course
-            </h1>
+            <div class="left">
 
-            <p class="par">Web Design is a specialization of the design stream. <br>They also use HTML,
-                CSS, WYSIWYG editing software, <br> mark up validators etc., <br>
-                to create design elements.
-            </p> 
+                <h1>Web Design & <br> 
+                  <span>Development</span> 
+                  <br>Course
+                </h1>
 
-            <button class="cn"><a href="#">JOIN US</a></button>
+                <p class="par">Web Design is a specialization of the design stream. <br>They also use HTML,
+                  CSS, WYSIWYG editing software, mark up <br> validators etc., 
+                  to create design elements.
+               </p> 
+
+               <button class="cn"><a href="#">JOIN US</a></button>
+
+            </div>
 
             <div class="form">
 
@@ -68,11 +72,11 @@
                 </p>
 
                 <div class="icons">
-                    <a href="#"><img src="assets\icons\round-facebook.svg" alt="" srcset=""> </a>
-                    <a href="#"><img src="assets\icons\google-outlined.svg" alt=""></a>
-                    <a href="#"><img src="assets\icons\instagram.svg" alt=""></a>
-                    <a href="#"><img src="assets\icons\twitter.svg" alt=""></a>
-                    <a href="#"><img src="assets\icons\skype.svg" alt=""></a>
+                    <a href="#"><img class="fb" src="assets\icons\round-facebook.svg" alt="" srcset=""> </a>
+                    <a href="#"><img class="ggl" src="assets\icons\google-outlined.svg" alt=""></a>
+                    <a href="#"><img class="ig" src="assets\icons\instagram.svg" alt=""></a>
+                    <a href="#"><img class="twt" src="assets\icons\twitter.svg" alt=""></a>
+                    <a href="#"><img class="skyp" src="assets\icons\skype.svg" alt=""></a>
                 </div>
 
             </div>
